--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vee-validate": "^2.0.0-rc.5",
     "vue": "^2.3.3",
     "vue-core-image-upload": "^2.2.4",
+    "vue-cropperjs": "^2.1.1",
     "vue-material": "^0.7.4",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
